--- a/srcs/libft/Makefile
+++ b/srcs/libft/Makefile
@@ -27,6 +27,7 @@ SRC =  ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c\
 	   ft_lennbr.c\
 	   ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c\
 	   ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c\
+	   ft_setsplit.c
 			
 
 OBJ = $(SRC:.c=.o)
