--- a/srcs/libft/Makefile
+++ b/srcs/libft/Makefile
@@ -15,12 +15,12 @@ CFLAGS = -Wall -Werror -Wextra -I. -c
 
 SRC =  ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c\
 	   ft_memmove.c ft_memchr.c ft_memcmp.c\
-	   ft_strlen.c ft_strlcpy.c ft_strlcat.c\
+	   ft_strlcpy.c ft_strlcat.c\
 	   ft_strchr.c ft_strrchr.c\
 	   ft_strnstr.c ft_strncmp.c\
 	   ft_atoi.c\
 	   ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_toupper.c ft_tolower.c\
-	   ft_calloc.c ft_strdup.c\
+	   ft_calloc.c\
 	   ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c\
 	   ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c\
 	   ft_strcpy.c get_next_line.c ft_lstfree_cont.c\
@@ -28,15 +28,24 @@ SRC =  ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c\
 	   ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c\
 	   ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c\
 	   ft_setsplit.c
-			
+SRC2 = ft_strlen.s ft_strdup.s ft_write.s ft_read.s ft_strcmp.s
+
+NM = nasm
+
+NFLAGS = -f macho64
 
 OBJ = $(SRC:.c=.o)
+
+OBJ2 = $(SRCS:.s=.o)
+
+%.o: %.s
+	$(NM) $(NFLAGS) $< -o $@
 
 
 all: $(NAME)
 
-$(NAME): $(OBJ)
-	@ar rc $(NAME) $(OBJ)
+$(NAME): $(OBJ) $(OBJ2)
+	@ar rc $(NAME) $(OBJ) $(OBJ2)
 	@ranlib $(NAME)
 	@echo Libft compiled!
 
