--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,4 +63,5 @@ add_executable(minishell_myFork
         tests/flags.c
         tests/start.c
         tests/test2.c
-        tests/test_signals.c)
+        tests/test_signals.c
+        )
