fixed pushback keys

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(srcs/libft
         srcs/parser
         srcs/commands
         srcs/)
-file(GLOB SOURCE_LIBFT "srcs/libft/*c") #ПРОХОДИТ ПО ПАПКЕ СОБИРАЯ ВСЕ ФАИЛЫ
+file(GLOB SOURCE_LIBFT "srcs/libft/*c") #PARSE THE DIRECTORY AND TAKE ALL FILES
 file(GLOB SOURCE_SRCS "srcs/*.c") #ПРОХОДИТ ПО ПАПКЕ СОБИРАЯ ВСЕ ФАИЛЫ
 file(GLOB SOURCE_COMMANDS "srcs/commands/*.c") #ПРОХОДИТ ПО ПАПКЕ СОБИРАЯ ВСЕ ФАИЛЫ
 file(GLOB SOURCE_PARSER "srcs/parser/*.c") #ПРОХОДИТ ПО ПАПКЕ СОБИРАЯ ВСЕ ФАИЛЫ
